<resources>
    <string name="app_name">Theatre Tickets</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="btn_login">Log in</string>
    <string name="btn_register">Register</string>
    <string name="btn_confirm">Confirm</string>
    <string name="prompt_firstname">First name</string>
    <string name="prompt_lastname">Surname</string>
    <string name="prompt_confirm_password">Confirm password</string>
    <string name="btn_return">Return home</string>
    <string name="title_activity_homepage">Homepage</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">My bookings</string>
    <string name="successful_creation">Account successfully created</string>
    <string name="title_activity_selected_show">Selected Show</string>
    <string name="btn_guest">Continue as a guest</string>
    <string name="title_settings">My account</string>
    <string name="btn_book">Book</string>
    <string name="lbl_numberTix">How many tickets do you want?</string>
    <string name="tix_counter">0</string>
    <string name="select_price_lbl">Select the price you would like:</string>
    <string name="btn_add_to_basket">Add to basket</string>
    <string name="title_activity_test">Test</string>
    <string name="title_activity_basket">Basket</string>
    <string name="number_of_tickets">Number of tickets: </string>
    <string name="my_basket_title">Your basket:</string>
    <string name="view_booking_lbl">View your tickets</string>
    <string name="upcoming_bookings">Your upcoming bookings</string>
    <string name="past_bookings">Your past bookings</string>
    <string name="leave_a_review">Leave a review</string>
    <string name="title_activity_create_review">Leave a review</string>
    <string name="write_review">Write a review (optional)</string>
    <string name="title_activity_view_tickets">View tickets</string>
    <string name="title_activity_maps">Map</string>
    <string name="button_navigate_venue">Navigate to venue</string>
    <string name="button_view_reviews">View reviews</string>
    <string name="your_booking">Your booking:</string>
    <string name="view_your_booking">View booking</string>
    <string name="calendar_sync">Sync booking</string>
    <string name="email_confirmation">Email a booking confirmation</string>
    <string name="reset_password">Forgotten your password? Click here</string>
    <string name="manage_account">Manage your account</string>
    <string name="change_password">Change your password</string>
    <string name="my_friends">My friends</string>
    <string name="my_reviews">My reviews</string>
    <string name="prompt_current_password">Enter current password</string>
    <string name="prompt_new_password">Enter new password</string>
    <string name="price">Price</string>
    <string name="date">Date</string>
    <string name="rating">Rating</string>
    <string name="location">Location</string>
    <string name="reviews_title">Reviews for</string>
    <string name="review_sort_date_asc">Sort by date (oldest first)</string>
    <string name="review_sort_date_desc">Sort by date (newest first)</string>
    <string name="review_sort_rating">Sort by rating</string>
    <string name="booking_confirmed">Your booking was successful. An email has been sent to confirm the booking;
        you can also view the booking under the "My Bookings" section of the app</string>
    <string name="string_not_enough_reviews">Not enough reviews for this to be displayed yet!</string>


    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>

    <string name="musicals_or_plays">Would you like to hear about musicals or plays?</string>
    <string name="both">Both</string>
    <string name="plays_only">Plays only</string>
    <string name="musicals_only">Musicals only</string>


    <string-array name="locations">
        <item>Greater London</item>
        <item>Scotland</item>
        <item>Northern Ireland</item>
        <item>Wales</item>
        <item>North East</item>
        <item>North West</item>
        <item>Yorkshire</item>
        <item>West Midlands</item>
        <item>East Midlands</item>
        <item>South West</item>
        <item>South East</item>
        <item>East of England</item>
    </string-array>

    <string name="filter_by_date">Would you like to view future shows, or just current ones?</string>
    <string name="all_shows">All shows</string>
    <string name="current_shows_only">Current shows only</string>
    <string name="filter_by_location">Filter by distance from your current location</string>
    <string name="filter_by_price">Filter by price</string>

    <string name="homepage_search_prompt">"Show, venue or city…"</string>

    <string name="update_preferences">Update notification preferences</string>
    <string name="view_your_reviews">View your past reviews</string>

    <string name="london">Greater London</string>
    <string name="scotland">Scotland</string>
    <string name="northern_ireland">Northern Ireland</string>
    <string name="wales">Wales</string>
    <string name="north_east">North East</string>
    <string name="north_west">North West</string>
    <string name="yorkshire">Yorkshire</string>
    <string name="wmidlands">West Midlands</string>
    <string name="emidlands">East Midlands</string>
    <string name="swest">South West</string>
    <string name="seast">South East</string>
    <string name="east_england">East of England</string>

    <string name="no_notifs">I don\'t want any notifications</string>
    <string name="submit_pref">Submit preferences</string>
    <string name="current_preferences">Select where you would like to subscribe to notifications for new shows (un-select current choices to unsubscribe)</string>
    <string name="tickets_left">Tickets left: \</string>
    <string name="pound_sign">£</string>
    <string name="reviews_for">Reviews for \</string>
    <string name="your_review">Your review</string>
    <string name="start_date">"Start date:  "</string>
    <string name="end_date">"End date: "</string>

</resources>
