<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:context="com.activities.theatreticketsapp.NotificationPreferences">

        <CheckBox
            android:id="@+id/londonBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/london"
            android:visibility="invisible"
            app:layout_constraintEnd_toStartOf="@+id/eeBox"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/promptTextView"
            tools:visibility="invisible" />

        <CheckBox
            android:id="@+id/scotlandBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/scotland"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="@+id/londonBox"
            app:layout_constraintTop_toBottomOf="@+id/londonBox"
            tools:visibility="invisible" />

        <CheckBox
            android:id="@+id/walesBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/wales"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="@+id/londonBox"
            app:layout_constraintTop_toBottomOf="@+id/scotlandBox"
            tools:visibility="invisible" />

        <CheckBox
            android:id="@+id/niBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/northern_ireland"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="@+id/londonBox"
            app:layout_constraintTop_toBottomOf="@+id/walesBox"
            tools:visibility="invisible" />

        <CheckBox
            android:id="@+id/eeBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/east_england"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/londonBox"
            app:layout_constraintTop_toTopOf="@+id/londonBox"
            tools:visibility="invisible" />

        <CheckBox
            android:id="@+id/seBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/seast"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="@+id/eeBox"
            app:layout_constraintTop_toBottomOf="@+id/eeBox"
            tools:visibility="invisible" />

        <CheckBox
            android:id="@+id/nwBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/north_west"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="@+id/eeBox"
            app:layout_constraintTop_toBottomOf="@+id/seBox"
            tools:visibility="invisible" />

        <CheckBox
            android:id="@+id/swBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/swest"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="@+id/eeBox"
            app:layout_constraintTop_toBottomOf="@+id/nwBox"
            tools:visibility="invisible" />

        <CheckBox
            android:id="@+id/neBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/north_east"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="@+id/londonBox"
            app:layout_constraintTop_toBottomOf="@+id/niBox"
            tools:visibility="invisible" />

        <CheckBox
            android:id="@+id/wmBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/wmidlands"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="@+id/eeBox"
            app:layout_constraintTop_toBottomOf="@+id/emBox"
            tools:visibility="invisible" />

        <CheckBox
            android:id="@+id/yorkshireBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/yorkshire"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="@+id/londonBox"
            app:layout_constraintTop_toBottomOf="@+id/neBox" />

        <CheckBox
            android:id="@+id/emBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/emidlands"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="@+id/eeBox"
            app:layout_constraintTop_toBottomOf="@+id/swBox"
            tools:visibility="invisible" />

        <TextView
            android:id="@+id/promptTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/current_preferences"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="@+id/eeBox"
            app:layout_constraintStart_toStartOf="@+id/londonBox"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/yorkshireBox">

            <RadioButton
                android:id="@+id/radioButtonPlays"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/plays_only" />

            <RadioButton
                android:id="@+id/radioButtonMusicals"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/musicals_only" />

            <RadioButton
                android:id="@+id/radioButtonBoth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/both" />
        </RadioGroup>

        <Button
            android:id="@+id/submitBtn"
            android:layout_width="153dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:background="#673AB7"
            android:text="@string/submit_pref"
            android:textColor="#FFFFFF"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="@+id/radioGroup"
            app:layout_constraintStart_toStartOf="@+id/radioGroup"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="@android:style/Widget.DeviceDefault.Light.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="3dp"
            app:layout_constraintEnd_toStartOf="@+id/emBox"
            app:layout_constraintTop_toTopOf="@+id/neBox" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>