<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="registerUsername"
            type="String" />
        <variable
            name="registerPassword"
            type="String" />
        <variable
            name="registerConfirmPassword"
            type="String" />
        <variable
            name="registerFirstName"
            type="String" />
        <variable
            name="registerLastName"
            type="String" />


    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/username"
            android:layout_width="310dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:background="@android:drawable/editbox_background"
            android:ems="10"
            android:hint="@string/prompt_email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:text="@{registerUsername}" />

        <EditText
            android:id="@+id/firstname"
            android:layout_width="310dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="28dp"
            android:background="@android:drawable/editbox_background"
            android:ems="10"
            android:hint="@string/prompt_firstname"
            android:importantForAutofill="no"
            android:inputType="textPersonName|textCapSentences"
            android:text="@{registerFirstName}" />

        <EditText
            android:id="@+id/lastname"
            android:layout_width="310dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="28dp"
            android:background="@android:drawable/editbox_background"
            android:ems="10"
            android:hint="@string/prompt_lastname"
            android:importantForAutofill="no"
            android:inputType="textPersonName|text|textCapSentences"
            android:text="@{registerLastName}" />

        <EditText
            android:id="@+id/password"
            android:layout_width="310dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="28dp"
            android:background="@android:drawable/editbox_background"
            android:ems="10"
            android:hint="@string/prompt_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"

            android:text="@{registerPassword}" />

        <EditText
            android:id="@+id/confirmPassword"
            android:layout_width="310dp"
            android:layout_height="48dp"
            android:layout_marginTop="28dp"
            android:layout_gravity="center"
            android:background="@android:drawable/editbox_background"
            android:ems="10"
            android:hint="@string/prompt_confirm_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:text="@{registerConfirmPassword}" />

        <Button
            android:id="@+id/registerBtn"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="28dp"
            android:background="#673AB7"
            android:onClick="register"
            android:text="@string/btn_register"
            android:textColor="#F3E9E9" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="35dp"
            android:visibility="gone" />

    </LinearLayout>
    </ScrollView>
</layout>